# google-cloud-rust

./: .clippy.toml  .codecov.yml  .dockerignore  .gcloudignore  .gitignore  .librarian-version.txt  .mdformat.toml  .sidekick-version.txt  .sidekick.toml  .taplo.toml  .tarpaulin.toml  .typos.toml  .yamlfmt.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  ITERATION.md  PLAN.md  README.md  TASK.md  deny.toml  go.work  go.work.sum  librarian.yaml  librarian.yaml.bak  test.txt  tutorial.md
auth/: Cargo.toml  README.md
auth/src/: lib.rs  metadata.rs  oauth2.rs  source.rs
demos/cloud-run-o11y/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
demos/cloud-run-o11y/src/: args.rs  error.rs  logs.rs  main.rs  observability.rs  state.rs
guide/samples/: Cargo.toml
guide/samples/src/: authentication.rs  binding_errors.rs  compute.rs  credentials.rs  endpoint.rs  error_handling.rs  examine_error_details.rs  gemini.rs  lib.rs  logging.rs  lro.rs  mocking.rs  occ.rs  pagination.rs  polling_policies.rs  retry_policies.rs  update_resource.rs
guide/samples/tests/: auth.rs  compute.rs  driver.rs  enums.rs  initialize_client.rs  list_resources.rs  mocking.rs  mocking_lros.rs  mocking_lros_auto.rs  mocking_lros_error.rs  mocking_lros_manual.rs  pubsub.rs  storage.rs
service_account_creds/: Cargo.toml
service_account_creds/src/: main.rs
src/auth/: .gitignore  Cargo.toml  ID_TOKEN_DESIGN_DOC.md  README.md  build.rs
src/auth-internal/: Cargo.toml
src/auth-internal/src/: credentials.rs  errors.rs  factory.rs  lib.rs  token.rs
src/auth/.gcb/: integration.yaml  terraform.yaml
src/auth/integration-tests/: Cargo.toml  README.md
src/auth/src/: access_boundary.rs  build_errors.rs  constants.rs  credentials.rs  errors.rs  headers_util.rs  http.rs  io.rs  lib.rs  manual.rs  options.rs  request.rs  retry.rs  signer.rs  token.rs  token_cache.rs  trust_boundary.rs  universe_domain.rs  utils.rs
src/auth/testdata/: sa_account_key.json
src/auth/tests/: credentials.rs  crypto_provider.rs  transient.rs
src/bigquery/: Cargo.toml  README.md
src/bigquery-derive/: Cargo.toml
src/bigquery-derive/src/: lib.rs
src/bigquery-write/: Cargo.toml  README.md
src/bigquery-write/grpc-mock/: Cargo.toml  README.md
src/bigquery-write/src/: error.rs  generated.rs  lib.rs  proto_schema.rs  runner.rs  stream.rs  transport.rs
src/bigquery/examples/: Cargo.toml  README.md
src/bigquery/grpc-mock/: Cargo.toml
src/bigquery/src/: client.rs  client_builder.rs  error.rs  generated.rs  iterator.rs  lib.rs  query.rs  query_request.rs  row.rs  schema.rs  transport.rs  value.rs
src/endurance-test/: Cargo.toml  README.md  endurance-test.service
src/endurance-test/src/: main.rs
src/firestore/: Cargo.toml  README.md
src/firestore/src/: convert.rs  generated.rs  lib.rs  status.rs
src/firestore/tests/: simple_request.rs
src/gax/: Cargo.toml  README.md
src/gax-internal/: Cargo.toml  README.md  build.rs
src/gax-internal/echo-server/: Cargo.toml
src/gax-internal/grpc-server/: Cargo.toml  build.rs
src/gax-internal/src/: api_header.rs  as_inner.rs  attempt_info.rs  attempt_interceptor.rs  gcs_constants.rs  grpc.rs  host.rs  http.rs  lib.rs  observability.rs  options.rs  path_parameter.rs  prost.rs  query_parameter.rs  routing_parameter.rs  unimplemented.rs  universe_domain.rs
src/gax-internal/tests/: auth.rs  client_builder.rs  grpc_auth.rs  grpc_client_polling.rs  grpc_convert.rs  grpc_observability.rs  grpc_retry_loop.rs  grpc_rust_client_streaming.rs  grpc_server_streaming_request.rs  grpc_simple_request.rs  grpc_streaming_request.rs  grpc_timeout.rs  grpc_transport_observability.rs  grpc_user_agent.rs  grpc_user_project.rs  http_auth.rs  http_client_errors.rs  http_client_polling.rs  http_host.rs  http_metadata.rs  http_observability.rs  http_query_parameters.rs  http_request_builder.rs  http_retry_loop.rs  http_timeout.rs  http_user_agent.rs  http_user_project.rs  mock_credentials.rs  paginator.rs  query_parameters.rs  retry_loop.rs  timeout.rs  user_agent.rs
src/gax/echo-server/: Cargo.toml
src/gax/src/: api_header.rs  attempt_interceptor_internal.rs  backoff_policy.rs  client_builder.rs  client_config.rs  credentials.rs  error.rs  exponential_backoff.rs  http_client_with_auth.rs  lib.rs  loop_state.rs  mock_rng.rs  options.rs  paginator.rs  path_parameter.rs  polling_backoff_policy.rs  polling_error_policy.rs  polling_policy.rs  polling_state.rs  query_parameter.rs  request_parameter.rs  response.rs  retry_loop.rs  retry_loop_internal.rs  retry_policy.rs  retry_result.rs  retry_state.rs  retry_throttler.rs  streaming.rs  throttle_result.rs  token.rs
src/gax/tests/: auth.rs  backoff_policy.rs  client_builder.rs  echo_server.rs  errors.rs  http_client_errors.rs  http_client_polling.rs  paginator.rs  path_parameters.rs  query_parameters.rs  request_options.rs  retry_loop.rs  retry_policy.rs  retry_throttler.rs  timeout.rs  user_agent.rs
src/http-client/: Cargo.toml
src/http-client/echo-server/: Cargo.toml
src/http-client/src/: lib.rs
src/http-client/tests/: http_client_errors.rs  query_parameters.rs  retry_loop.rs  timeout.rs
src/integration-tests/: Cargo.toml
src/integration-tests/src/: aiplatform.rs  bigquery.rs  compute.rs  error_details.rs  firestore.rs  lib.rs  observability.rs  pubsub.rs  secret_manager.rs  showcase.rs  sql.rs  storage.rs  telco_automation.rs  workflows.rs  (+1 more)
src/lro/: Cargo.toml  README.md
src/protojson-conformance/: Cargo.toml  README.md  expected_failures.txt
src/pubsub/: .repo-metadata.json  ARCHITECTURE.md  Cargo.toml  README.md
src/retry/: Cargo.toml
src/spanner/: Cargo.toml  README.md
src/storage/: .repo-metadata.json  Cargo.toml  GEMINI.md  README.md  build.rs
src/storage-control/: Cargo.toml
src/test-macros/: Cargo.toml
src/test-utils/: Cargo.toml
src/wkt/: Cargo.toml  README.md
storage/: Cargo.toml  README.md
storage/src/: bytes.rs  lib.rs  model.rs
test-mds/: Cargo.toml
test-mds/src/: main.rs
tests/auto-populated/: Cargo.toml  README.md
tests/dns/: Cargo.toml  README.md
(+2008 files in other folders)
