# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"

members = [
  "guide/samples",
  "src/auth",
  "src/auth/integration-tests",
  "src/base",
  "src/gax",
  "src/generated/api/servicecontrol/v1",
  "src/generated/api/servicecontrol/v2",
  "src/generated/api/servicemanagement/v1",
  "src/generated/api/serviceusage/v1",
  "src/generated/api/types",
  "src/generated/appengine/v1",
  "src/generated/bigtable/admin/v2",
  "src/generated/cloud/accessapproval/v1",
  "src/generated/cloud/apigateway/v1",
  "src/generated/cloud/apigeeconnect/v1",
  "src/generated/cloud/assuredworkloads/v1",
  "src/generated/cloud/bigquery/connection/v1",
  "src/generated/cloud/bigquery/datatransfer/v1",
  "src/generated/cloud/bigquery/reservation/v1",
  "src/generated/cloud/billing/v1",
  "src/generated/cloud/binaryauthorization/v1",
  "src/generated/cloud/clouddms/v1",
  "src/generated/cloud/common",
  "src/generated/cloud/contactcenterinsights/v1",
  "src/generated/cloud/datacatalog/v1",
  "src/generated/cloud/datafusion/v1",
  "src/generated/cloud/dataproc/v1",
  "src/generated/cloud/datastream/v1",
  "src/generated/cloud/deploy/v1",
  "src/generated/cloud/dialogflow/cx/v3",
  "src/generated/cloud/documentai/v1",
  "src/generated/cloud/essentialcontacts/v1",
  "src/generated/cloud/eventarc/v1",
  "src/generated/cloud/filestore/v1",
  "src/generated/cloud/functions/v2",
  "src/generated/cloud/iap/v1",
  "src/generated/cloud/ids/v1",
  "src/generated/cloud/kms/inventory/v1",
  "src/generated/cloud/kms/v1",
  "src/generated/cloud/language/v2",
  "src/generated/cloud/location",
  "src/generated/cloud/managedidentities/v1",
  "src/generated/cloud/memcache/v1",
  "src/generated/cloud/metastore/v1",
  "src/generated/cloud/networkmanagement/v1",
  "src/generated/cloud/notebooks/v2",
  "src/generated/cloud/optimization/v1",
  "src/generated/cloud/orchestration/airflow/service/v1",
  "src/generated/cloud/orgpolicy/v2",
  "src/generated/cloud/oslogin/v1",
  "src/generated/cloud/policytroubleshooter/v1",
  "src/generated/cloud/recaptchaenterprise/v1",
  "src/generated/cloud/recommender/logging/v1",
  "src/generated/cloud/recommender/v1",
  "src/generated/cloud/redis/cluster/v1",
  "src/generated/cloud/redis/v1",
  "src/generated/cloud/resourcemanager/v3",
  "src/generated/cloud/retail/v2",
  "src/generated/cloud/run/v2",
  "src/generated/cloud/scheduler/v1",
  "src/generated/cloud/secretmanager/v1",
  "src/generated/cloud/security/privateca/v1",
  "src/generated/cloud/securitycenter/v2",
  "src/generated/cloud/servicedirectory/v1",
  "src/generated/cloud/shell/v1",
  "src/generated/cloud/speech/v2",
  "src/generated/cloud/talent/v4",
  "src/generated/cloud/tasks/v2",
  "src/generated/cloud/texttospeech/v1",
  "src/generated/cloud/tpu/v2",
  "src/generated/cloud/translate/v3",
  "src/generated/cloud/video/transcoder/v1",
  "src/generated/cloud/videointelligence/v1",
  "src/generated/cloud/vision/v1",
  "src/generated/cloud/vmmigration/v1",
  "src/generated/cloud/vpcaccess/v1",
  "src/generated/cloud/webrisk/v1",
  "src/generated/cloud/websecurityscanner/v1",
  "src/generated/cloud/workflows/v1",
  "src/generated/container/v1",
  "src/generated/datastore/admin/v1",
  "src/generated/devtools/artifactregistry/v1",
  "src/generated/devtools/cloudbuild/v1",
  "src/generated/devtools/cloudbuild/v2",
  "src/generated/devtools/cloudtrace/v2",
  "src/generated/grafeas/v1",
  "src/generated/iam/admin/v1",
  "src/generated/iam/credentials/v1",
  "src/generated/iam/v1",
  "src/generated/iam/v2",
  "src/generated/identity/accesscontextmanager/type",
  "src/generated/identity/accesscontextmanager/v1",
  "src/generated/logging/type",
  "src/generated/logging/v2",
  "src/generated/longrunning",
  "src/generated/monitoring/dashboard/v1",
  "src/generated/monitoring/metricsscope/v1",
  "src/generated/monitoring/v3",
  "src/generated/openapi-validation",
  "src/generated/oslogin/common",
  "src/generated/privacy/dlp/v2",
  "src/generated/rpc/context",
  "src/generated/rpc/types",
  "src/generated/spanner/admin/database/v1",
  "src/generated/spanner/admin/instance/v1",
  "src/generated/storagetransfer/v1",
  "src/generated/type",
  "src/integration-tests",
  "src/lro",
  "src/root",
  "src/wkt",
  "tools/check-copyright",
]

[workspace.package]
edition     = "2021"
authors     = ["Google LLC"]
description = "Google Cloud Client Libraries for Rust"
license     = "Apache-2.0"
repository  = "https://github.com/googleapis/google-cloud-rust/tree/main"
keywords    = ["gcp", "google-cloud", "google-cloud-rust", "sdk"]
categories  = ["network-programming"]
