# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"

default-members = [
  "guide/samples",
  "src/auth",
  "src/auth/integration-tests",
  "src/base",
  "src/firestore",
  "src/gax",
  "src/gax-internal",
  "src/integration-tests",
  "src/lro",
  "src/root",
  "src/wkt",
  "tools/check-copyright",
  # We need `cargo test` to run at least some documentation tests for generated
  # libraries. These libraries are implicitly required by the integration tests
  # and samples, so they are not too expensive to include in the default builds.
  "src/generated/cloud/language/v2",
  "src/generated/cloud/secretmanager/v1",
  "src/generated/cloud/speech/v2",
  "src/generated/cloud/workflows/v1",
  "src/generated/openapi-validation",
]
members = [
  "guide/samples",
  "src/auth",
  "src/auth/integration-tests",
  "src/base",
  "src/firestore",
  "src/gax",
  "src/gax-internal",
  "src/generated/api/apikeys/v2",
  "src/generated/api/servicecontrol/v1",
  "src/generated/api/servicecontrol/v2",
  "src/generated/api/servicemanagement/v1",
  "src/generated/api/serviceusage/v1",
  "src/generated/api/types",
  "src/generated/appengine/v1",
  "src/generated/apps/script/calendar",
  "src/generated/apps/script/docs",
  "src/generated/apps/script/drive",
  "src/generated/apps/script/gmail",
  "src/generated/apps/script/gtype",
  "src/generated/apps/script/sheets",
  "src/generated/apps/script/slides",
  "src/generated/bigtable/admin/v2",
  "src/generated/cloud/accessapproval/v1",
  "src/generated/cloud/advisorynotifications/v1",
  "src/generated/cloud/aiplatform/v1",
  "src/generated/cloud/alloydb/connectors/v1",
  "src/generated/cloud/alloydb/v1",
  "src/generated/cloud/apigateway/v1",
  "src/generated/cloud/apigeeconnect/v1",
  "src/generated/cloud/apihub/v1",
  "src/generated/cloud/apphub/v1",
  "src/generated/cloud/asset/v1",
  "src/generated/cloud/assuredworkloads/v1",
  "src/generated/cloud/backupdr/v1",
  "src/generated/cloud/baremetalsolution/v2",
  "src/generated/cloud/beyondcorp/appconnections/v1",
  "src/generated/cloud/beyondcorp/appconnectors/v1",
  "src/generated/cloud/beyondcorp/appgateways/v1",
  "src/generated/cloud/beyondcorp/clientconnectorservices/v1",
  "src/generated/cloud/beyondcorp/clientgateways/v1",
  "src/generated/cloud/bigquery/analyticshub/v1",
  "src/generated/cloud/bigquery/connection/v1",
  "src/generated/cloud/bigquery/datapolicies/v1",
  "src/generated/cloud/bigquery/datatransfer/v1",
  "src/generated/cloud/bigquery/migration/v2",
  "src/generated/cloud/bigquery/reservation/v1",
  "src/generated/cloud/bigquery/v2",
  "src/generated/cloud/billing/v1",
  "src/generated/cloud/binaryauthorization/v1",
  "src/generated/cloud/certificatemanager/v1",
  "src/generated/cloud/chronicle/v1",
  "src/generated/cloud/cloudcontrolspartner/v1",
  "src/generated/cloud/clouddms/v1",
  "src/generated/cloud/commerce/consumer/procurement/v1",
  "src/generated/cloud/common",
  "src/generated/cloud/confidentialcomputing/v1",
  "src/generated/cloud/config/v1",
  "src/generated/cloud/connectors/v1",
  "src/generated/cloud/contactcenterinsights/v1",
  "src/generated/cloud/datacatalog/lineage/v1",
  "src/generated/cloud/datacatalog/v1",
  "src/generated/cloud/datafusion/v1",
  "src/generated/cloud/dataproc/v1",
  "src/generated/cloud/datastream/v1",
  "src/generated/cloud/deploy/v1",
  "src/generated/cloud/developerconnect/v1",
  "src/generated/cloud/dialogflow/cx/v3",
  "src/generated/cloud/dialogflow/v2",
  "src/generated/cloud/discoveryengine/v1",
  "src/generated/cloud/documentai/v1",
  "src/generated/cloud/domains/v1",
  "src/generated/cloud/edgecontainer/v1",
  "src/generated/cloud/edgenetwork/v1",
  "src/generated/cloud/essentialcontacts/v1",
  "src/generated/cloud/eventarc/v1",
  "src/generated/cloud/filestore/v1",
  "src/generated/cloud/financialservices/v1",
  "src/generated/cloud/functions/v2",
  "src/generated/cloud/gkebackup/v1",
  "src/generated/cloud/gkeconnect/gateway/v1",
  "src/generated/cloud/gkehub/configmanagement/v1",
  "src/generated/cloud/gkehub/multiclusteringress/v1",
  "src/generated/cloud/gkehub/v1",
  "src/generated/cloud/gkemulticloud/v1",
  "src/generated/cloud/gsuiteaddons/v1",
  "src/generated/cloud/iap/v1",
  "src/generated/cloud/ids/v1",
  "src/generated/cloud/kms/inventory/v1",
  "src/generated/cloud/kms/v1",
  "src/generated/cloud/language/v2",
  "src/generated/cloud/licensemanager/v1",
  "src/generated/cloud/location",
  "src/generated/cloud/managedidentities/v1",
  "src/generated/cloud/memcache/v1",
  "src/generated/cloud/memorystore/v1",
  "src/generated/cloud/metastore/v1",
  "src/generated/cloud/migrationcenter/v1",
  "src/generated/cloud/modelarmor/v1",
  "src/generated/cloud/netapp/v1",
  "src/generated/cloud/networkconnectivity/v1",
  "src/generated/cloud/networkmanagement/v1",
  "src/generated/cloud/networksecurity/v1",
  "src/generated/cloud/networkservices/v1",
  "src/generated/cloud/notebooks/v2",
  "src/generated/cloud/optimization/v1",
  "src/generated/cloud/oracledatabase/v1",
  "src/generated/cloud/orchestration/airflow/service/v1",
  "src/generated/cloud/orgpolicy/v1",
  "src/generated/cloud/orgpolicy/v2",
  "src/generated/cloud/osconfig/v1",
  "src/generated/cloud/oslogin/v1",
  "src/generated/cloud/parallelstore/v1",
  "src/generated/cloud/parametermanager/v1",
  "src/generated/cloud/policysimulator/v1",
  "src/generated/cloud/policytroubleshooter/iam/v3",
  "src/generated/cloud/policytroubleshooter/v1",
  "src/generated/cloud/privilegedaccessmanager/v1",
  "src/generated/cloud/rapidmigrationassessment/v1",
  "src/generated/cloud/recaptchaenterprise/v1",
  "src/generated/cloud/recommender/logging/v1",
  "src/generated/cloud/recommender/v1",
  "src/generated/cloud/redis/cluster/v1",
  "src/generated/cloud/redis/v1",
  "src/generated/cloud/resourcemanager/v3",
  "src/generated/cloud/retail/v2",
  "src/generated/cloud/run/v2",
  "src/generated/cloud/scheduler/v1",
  "src/generated/cloud/secretmanager/v1",
  "src/generated/cloud/securesourcemanager/v1",
  "src/generated/cloud/security/privateca/v1",
  "src/generated/cloud/security/publicca/v1",
  "src/generated/cloud/securitycenter/v2",
  "src/generated/cloud/securityposture/v1",
  "src/generated/cloud/servicedirectory/v1",
  "src/generated/cloud/servicehealth/v1",
  "src/generated/cloud/shell/v1",
  "src/generated/cloud/speech/v2",
  "src/generated/cloud/storagebatchoperations/v1",
  "src/generated/cloud/storageinsights/v1",
  "src/generated/cloud/support/v2",
  "src/generated/cloud/talent/v4",
  "src/generated/cloud/tasks/v2",
  "src/generated/cloud/telcoautomation/v1",
  "src/generated/cloud/texttospeech/v1",
  "src/generated/cloud/timeseriesinsights/v1",
  "src/generated/cloud/tpu/v2",
  "src/generated/cloud/translate/v3",
  "src/generated/cloud/video/livestream/v1",
  "src/generated/cloud/video/stitcher/v1",
  "src/generated/cloud/video/transcoder/v1",
  "src/generated/cloud/videointelligence/v1",
  "src/generated/cloud/vision/v1",
  "src/generated/cloud/vmmigration/v1",
  "src/generated/cloud/vmwareengine/v1",
  "src/generated/cloud/vpcaccess/v1",
  "src/generated/cloud/webrisk/v1",
  "src/generated/cloud/websecurityscanner/v1",
  "src/generated/cloud/workflows/executions/v1",
  "src/generated/cloud/workflows/v1",
  "src/generated/cloud/workstations/v1",
  "src/generated/container/v1",
  "src/generated/datastore/admin/v1",
  "src/generated/devtools/artifactregistry/v1",
  "src/generated/devtools/cloudbuild/v1",
  "src/generated/devtools/cloudbuild/v2",
  "src/generated/devtools/cloudprofiler/v2",
  "src/generated/devtools/cloudtrace/v2",
  "src/generated/devtools/containeranalysis/v1",
  "src/generated/firestore/admin/v1",
  "src/generated/grafeas/v1",
  "src/generated/iam/admin/v1",
  "src/generated/iam/credentials/v1",
  "src/generated/iam/v1",
  "src/generated/iam/v2",
  "src/generated/iam/v3",
  "src/generated/identity/accesscontextmanager/type",
  "src/generated/identity/accesscontextmanager/v1",
  "src/generated/logging/type",
  "src/generated/logging/v2",
  "src/generated/longrunning",
  "src/generated/monitoring/dashboard/v1",
  "src/generated/monitoring/metricsscope/v1",
  "src/generated/monitoring/v3",
  "src/generated/openapi-validation",
  "src/generated/oslogin/common",
  "src/generated/privacy/dlp/v2",
  "src/generated/rpc/context",
  "src/generated/rpc/types",
  "src/generated/spanner/admin/database/v1",
  "src/generated/spanner/admin/instance/v1",
  "src/generated/storagetransfer/v1",
  "src/generated/type",
  "src/integration-tests",
  "src/lro",
  "src/root",
  "src/wkt",
  "tools/check-copyright",
]

[workspace.package]
edition      = "2024"
authors      = ["Google LLC"]
description  = "Google Cloud Client Libraries for Rust"
license      = "Apache-2.0"
repository   = "https://github.com/googleapis/google-cloud-rust/tree/main"
keywords     = ["gcp", "google-cloud", "google-cloud-rust", "sdk"]
categories   = ["network-programming"]
rust-version = "1.85.0"

[workspace.dependencies]
tokio-test = "0.4"
