# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"

default-members = [
  "guide/samples",
  "src/auth",
  "src/base",
  "src/bigquery",
  "src/bigtable",
  "src/datastore",
  "src/firestore",
  "src/gax",
  "src/gax-internal",
  "src/lro",
  "src/pubsub",
  "src/root",
  "src/spanner",
  "src/storage",
  "src/wkt",
  # We need `cargo test` to run at least some documentation tests for generated
  # libraries. These libraries are implicitly required by the integration tests
  # and samples, so they are not too expensive to include in the default builds.
  "src/generated/cloud/language/v2",
  "src/generated/cloud/secretmanager/v1",
  "src/generated/cloud/speech/v2",
  "src/generated/cloud/workflows/v1",
  "src/generated/openapi-validation",
  "tests/integration",
  "tests/integration-auth",
]

members = [
  "guide/samples",
  "src/auth",
  "src/base",
  "src/bigquery",
  "src/bigtable",
  "src/datastore",
  "src/firestore",
  "src/gax",
  "src/gax-internal",
  "src/generated/api/apikeys/v2",
  "src/generated/api/cloudquotas/v1",
  "src/generated/api/servicecontrol/v1",
  "src/generated/api/servicecontrol/v2",
  "src/generated/api/servicemanagement/v1",
  "src/generated/api/serviceusage/v1",
  "src/generated/api/types",
  "src/generated/appengine/v1",
  "src/generated/apps/script/calendar",
  "src/generated/apps/script/docs",
  "src/generated/apps/script/drive",
  "src/generated/apps/script/gmail",
  "src/generated/apps/script/gtype",
  "src/generated/apps/script/sheets",
  "src/generated/apps/script/slides",
  "src/generated/bigtable/admin/v2",
  "src/generated/cloud/accessapproval/v1",
  "src/generated/cloud/advisorynotifications/v1",
  "src/generated/cloud/aiplatform/schema/predict/instance",
  "src/generated/cloud/aiplatform/schema/predict/params",
  "src/generated/cloud/aiplatform/schema/predict/prediction",
  "src/generated/cloud/aiplatform/schema/trainingjob/definition",
  "src/generated/cloud/aiplatform/v1",
  "src/generated/cloud/alloydb/connectors/v1",
  "src/generated/cloud/alloydb/v1",
  "src/generated/cloud/apigateway/v1",
  "src/generated/cloud/apigeeconnect/v1",
  "src/generated/cloud/apihub/v1",
  "src/generated/cloud/apphub/v1",
  "src/generated/cloud/asset/v1",
  "src/generated/cloud/assuredworkloads/v1",
  "src/generated/cloud/backupdr/v1",
  "src/generated/cloud/baremetalsolution/v2",
  "src/generated/cloud/beyondcorp/appconnections/v1",
  "src/generated/cloud/beyondcorp/appconnectors/v1",
  "src/generated/cloud/beyondcorp/appgateways/v1",
  "src/generated/cloud/beyondcorp/clientconnectorservices/v1",
  "src/generated/cloud/beyondcorp/clientgateways/v1",
  "src/generated/cloud/biglake/v1",
  "src/generated/cloud/bigquery/analyticshub/v1",
  "src/generated/cloud/bigquery/connection/v1",
  "src/generated/cloud/bigquery/datapolicies/v1",
  "src/generated/cloud/bigquery/datapolicies/v2",
  "src/generated/cloud/bigquery/datatransfer/v1",
  "src/generated/cloud/bigquery/migration/v2",
  "src/generated/cloud/bigquery/reservation/v1",
  "src/generated/cloud/bigquery/v2",
  "src/generated/cloud/billing/v1",
  "src/generated/cloud/binaryauthorization/v1",
  "src/generated/cloud/certificatemanager/v1",
  "src/generated/cloud/chronicle/v1",
  "src/generated/cloud/cloudcontrolspartner/v1",
  "src/generated/cloud/clouddms/v1",
  "src/generated/cloud/cloudsecuritycompliance/v1",
  "src/generated/cloud/commerce/consumer/procurement/v1",
  "src/generated/cloud/common",
  "src/generated/cloud/compute/v1",
  "src/generated/cloud/confidentialcomputing/v1",
  "src/generated/cloud/config/v1",
  "src/generated/cloud/configdelivery/v1",
  "src/generated/cloud/connectors/v1",
  "src/generated/cloud/contactcenterinsights/v1",
  "src/generated/cloud/datacatalog/lineage/v1",
  "src/generated/cloud/datacatalog/v1",
  "src/generated/cloud/dataform/v1",
  "src/generated/cloud/datafusion/v1",
  "src/generated/cloud/dataplex/v1",
  "src/generated/cloud/dataproc/v1",
  "src/generated/cloud/datastream/v1",
  "src/generated/cloud/deploy/v1",
  "src/generated/cloud/developerconnect/v1",
  "src/generated/cloud/devicestreaming/v1",
  "src/generated/cloud/dialogflow/cx/v3",
  "src/generated/cloud/dialogflow/v2",
  "src/generated/cloud/discoveryengine/v1",
  "src/generated/cloud/documentai/v1",
  "src/generated/cloud/domains/v1",
  "src/generated/cloud/edgecontainer/v1",
  "src/generated/cloud/edgenetwork/v1",
  "src/generated/cloud/essentialcontacts/v1",
  "src/generated/cloud/eventarc/publishing/v1",
  "src/generated/cloud/eventarc/v1",
  "src/generated/cloud/filestore/v1",
  "src/generated/cloud/financialservices/v1",
  "src/generated/cloud/functions/v2",
  "src/generated/cloud/gkebackup/v1",
  "src/generated/cloud/gkeconnect/gateway/v1",
  "src/generated/cloud/gkehub/configmanagement/v1",
  "src/generated/cloud/gkehub/multiclusteringress/v1",
  "src/generated/cloud/gkehub/v1",
  "src/generated/cloud/gkemulticloud/v1",
  "src/generated/cloud/gkerecommender/v1",
  "src/generated/cloud/gsuiteaddons/v1",
  "src/generated/cloud/iap/v1",
  "src/generated/cloud/ids/v1",
  "src/generated/cloud/kms/inventory/v1",
  "src/generated/cloud/kms/v1",
  "src/generated/cloud/language/v2",
  "src/generated/cloud/licensemanager/v1",
  "src/generated/cloud/location",
  "src/generated/cloud/locationfinder/v1",
  "src/generated/cloud/lustre/v1",
  "src/generated/cloud/maintenance/api/v1",
  "src/generated/cloud/managedidentities/v1",
  "src/generated/cloud/managedkafka/schemaregistry/v1",
  "src/generated/cloud/managedkafka/v1",
  "src/generated/cloud/memcache/v1",
  "src/generated/cloud/memorystore/v1",
  "src/generated/cloud/metastore/v1",
  "src/generated/cloud/migrationcenter/v1",
  "src/generated/cloud/modelarmor/v1",
  "src/generated/cloud/netapp/v1",
  "src/generated/cloud/networkconnectivity/v1",
  "src/generated/cloud/networkmanagement/v1",
  "src/generated/cloud/networksecurity/v1",
  "src/generated/cloud/networkservices/v1",
  "src/generated/cloud/notebooks/v2",
  "src/generated/cloud/optimization/v1",
  "src/generated/cloud/oracledatabase/v1",
  "src/generated/cloud/orchestration/airflow/service/v1",
  "src/generated/cloud/orgpolicy/v1",
  "src/generated/cloud/orgpolicy/v2",
  "src/generated/cloud/osconfig/v1",
  "src/generated/cloud/oslogin/v1",
  "src/generated/cloud/parallelstore/v1",
  "src/generated/cloud/parametermanager/v1",
  "src/generated/cloud/policysimulator/v1",
  "src/generated/cloud/policytroubleshooter/iam/v3",
  "src/generated/cloud/policytroubleshooter/v1",
  "src/generated/cloud/privilegedaccessmanager/v1",
  "src/generated/cloud/rapidmigrationassessment/v1",
  "src/generated/cloud/recaptchaenterprise/v1",
  "src/generated/cloud/recommender/logging/v1",
  "src/generated/cloud/recommender/v1",
  "src/generated/cloud/redis/cluster/v1",
  "src/generated/cloud/redis/v1",
  "src/generated/cloud/resourcemanager/v3",
  "src/generated/cloud/retail/v2",
  "src/generated/cloud/run/v2",
  "src/generated/cloud/scheduler/v1",
  "src/generated/cloud/secretmanager/v1",
  "src/generated/cloud/securesourcemanager/v1",
  "src/generated/cloud/security/privateca/v1",
  "src/generated/cloud/security/publicca/v1",
  "src/generated/cloud/securitycenter/v2",
  "src/generated/cloud/securityposture/v1",
  "src/generated/cloud/servicedirectory/v1",
  "src/generated/cloud/servicehealth/v1",
  "src/generated/cloud/shell/v1",
  "src/generated/cloud/speech/v2",
  "src/generated/cloud/sql/v1",
  "src/generated/cloud/storagebatchoperations/v1",
  "src/generated/cloud/storageinsights/v1",
  "src/generated/cloud/support/v2",
  "src/generated/cloud/talent/v4",
  "src/generated/cloud/tasks/v2",
  "src/generated/cloud/telcoautomation/v1",
  "src/generated/cloud/texttospeech/v1",
  "src/generated/cloud/timeseriesinsights/v1",
  "src/generated/cloud/tpu/v2",
  "src/generated/cloud/translate/v3",
  "src/generated/cloud/video/livestream/v1",
  "src/generated/cloud/video/stitcher/v1",
  "src/generated/cloud/video/transcoder/v1",
  "src/generated/cloud/videointelligence/v1",
  "src/generated/cloud/vision/v1",
  "src/generated/cloud/vmmigration/v1",
  "src/generated/cloud/vmwareengine/v1",
  "src/generated/cloud/vpcaccess/v1",
  "src/generated/cloud/webrisk/v1",
  "src/generated/cloud/websecurityscanner/v1",
  "src/generated/cloud/workflows/executions/v1",
  "src/generated/cloud/workflows/v1",
  "src/generated/cloud/workstations/v1",
  "src/generated/container/v1",
  "src/generated/datastore/admin/v1",
  "src/generated/devtools/artifactregistry/v1",
  "src/generated/devtools/cloudbuild/v1",
  "src/generated/devtools/cloudbuild/v2",
  "src/generated/devtools/cloudprofiler/v2",
  "src/generated/devtools/cloudtrace/v1",
  "src/generated/devtools/cloudtrace/v2",
  "src/generated/devtools/containeranalysis/v1",
  "src/generated/firestore/admin/v1",
  "src/generated/grafeas/v1",
  "src/generated/iam/admin/v1",
  "src/generated/iam/credentials/v1",
  "src/generated/iam/v1",
  "src/generated/iam/v2",
  "src/generated/iam/v3",
  "src/generated/identity/accesscontextmanager/type",
  "src/generated/identity/accesscontextmanager/v1",
  "src/generated/logging/type",
  "src/generated/logging/v2",
  "src/generated/longrunning",
  "src/generated/monitoring/dashboard/v1",
  "src/generated/monitoring/metricsscope/v1",
  "src/generated/monitoring/v3",
  "src/generated/openapi-validation",
  "src/generated/oslogin/common",
  "src/generated/privacy/dlp/v2",
  "src/generated/rpc/context",
  "src/generated/rpc/types",
  "src/generated/showcase",
  "src/generated/spanner/admin/database/v1",
  "src/generated/spanner/admin/instance/v1",
  "src/generated/storagetransfer/v1",
  "src/generated/type",
  "src/lro",
  "src/pubsub",
  "src/pubsub/examples",
  "src/root",
  "src/spanner",
  "src/storage",
  "src/storage/benchmarks/random",
  "src/storage/benchmarks/w1r3",
  "src/storage/examples",
  "src/storage/tests/scenarios",
  "src/wkt",
  "tests/endurance",
  "tests/integration",
  "tests/integration-auth",
  "tests/protojson-conformance",
  "tools/check-copyright",
  "tools/minimal-version-helper",
]

[workspace.package]
edition      = "2024"
authors      = ["Google LLC"]
description  = "Google Cloud Client Libraries for Rust"
license      = "Apache-2.0"
repository   = "https://github.com/googleapis/google-cloud-rust/tree/main"
keywords     = ["gcp", "google-cloud", "google-cloud-rust", "sdk"]
categories   = ["network-programming"]
rust-version = "1.85.0"

# Define a custom profile for builds on GHA. The standard profiles exhaust the
# available disk space on the free GHA runners. The GHA builds cannot take
# advantage of incremental builds, and such builds require significant more
# disk space. As of 2025-04-20 disabling incremental builds changes the disk
# requirements from about 13 GiB to about 5 GiB.
[profile.ci]
inherits    = "dev"
incremental = false

[workspace.dependencies]
async-trait           = { default-features = false, version = "0.1.85" }
base64                = { default-features = false, version = "0.22", features = ["std"] }
bon                   = { default-features = false, version = "3.8" }
bytes                 = { default-features = false, version = "1.10", features = ["serde"] }
cargo_metadata        = { default-features = false, version = "0.23" }
chrono                = { default-features = false, version = "0.4.42" }
crates_io_api         = { default-features = false, version = "0.12" }
clap                  = { default-features = false, version = "4" }
crc32c                = { default-features = false, version = "0.6.8" }
futures               = { default-features = false, version = "0.3" }
hex                   = { default-features = false, version = "0.4" }
http                  = { default-features = false, version = "1", features = ["std"] }
http-body             = { default-features = false, version = "1" }
http-body-util        = { default-features = false, version = "0.1.3" }
humantime             = { default-features = false, version = "2" }
hyper                 = { default-features = false, version = "1" }
jsonwebtoken          = { default-features = false, version = "10" }
lazy_static           = { default-features = false, version = "1.2" }
opentelemetry         = { default-features = false, version = "0.31", features = ["trace"] }
opentelemetry-proto   = { default-features = false, version = "0.31", features = ["gen-tonic", "trace"] }
opentelemetry_sdk     = { default-features = false, version = "0.31", features = ["rt-tokio", "trace"] }
parse-size            = { default-features = false, version = "1.1" }
percent-encoding      = { default-features = false, version = "2" }
pin-project           = { default-features = false, version = "1" }
prost                 = { default-features = false, version = "0.14", features = ["std"] }
prost-build           = { default-features = false, version = "0.14" }
prost-types           = { default-features = false, version = "0.14" }
rand                  = { default-features = false, version = "0.9.2" }
reqwest               = { default-features = false, version = "0.12.28", features = ["json"] }
rustls                = { default-features = false, version = "0.23" }
rustls-pki-types      = { default-features = false, version = "1.13" }
semver                = { default-features = false, version = "1.0.21" }
serde                 = { default-features = false, version = "1.0.228", features = ["serde_derive"] }
serde_json            = { default-features = false, version = "1.0.148", features = ["std"] }
serde_with            = { default-features = false, version = "3", features = ["base64", "macros", "std"] }
sha2                  = { default-features = false, version = "0.10" }
thiserror             = { default-features = false, version = "2" }
time                  = { default-features = false, version = "0.3.44" }
tokio                 = { default-features = false, version = "1" }
tokio-metrics         = { default-features = false, version = "0.4.5" }
tokio-util            = { default-features = false, version = "0.7" }
toml_edit             = { default-features = false, version = "0.24" }
tonic                 = { default-features = false, version = "0.14.1", features = ["tls-native-roots", "tls-ring"] }
tonic-prost           = { default-features = false, version = "0.14.2" }
tonic-prost-build     = { default-features = false, version = "0.14.1" }
tower                 = { default-features = false, version = "0.5", features = ["util"] }
tracing               = { default-features = false, version = "0.1.44", features = ["attributes"] }
tracing-log           = { default-features = false, version = "0.2" }
tracing-opentelemetry = { default-features = false, version = "0.32" }
tracing-subscriber    = { default-features = false, version = "0.3.22" }
url                   = { default-features = false, version = "2" }
uuid                  = { default-features = false, version = "1", features = ["v4"] }

opentelemetry-otlp = { default-features = false, version = "0.31", features = [
  "grpc-tonic",
  "tls",
  "tls-roots",
  "trace",
] }
opentelemetry-semantic-conventions = { default-features = false, version = "0.31.0", features = [
  "semconv_experimental",
] }


# Transitive dependencies. Used for minimal version selection.
mime = { default-features = false, version = "0.3.17" }

# Test packages
anyhow            = { default-features = false, version = "1.0.100", features = ["std"] }
axum              = { default-features = false, version = "0.8" }
flate2            = { default-features = false, version = "1" }
httptest          = { default-features = false, version = "0.16.3" }
md5               = { default-features = false, version = "0.8" }
mockall           = { default-features = false, version = "0.14" }
multer            = { default-features = false, version = "3" }
mutants           = { default-features = false, version = "0.0.3" }
once_cell         = { default-features = false, version = "1.19.0" }
pastey            = { default-features = false, version = "0.2.1" }
pretty_assertions = { default-features = false, version = "1.4.1", features = ["alloc"] }
regex             = { default-features = false, version = "1" }
rsa               = { default-features = false, version = "0.9.10" }
rustc_version     = { default-features = false, version = "0.4" }
scoped-env        = { default-features = false, version = "2.1" }
serial_test       = { default-features = false, version = "3" }
static_assertions = { default-features = false, version = "1.1" }
tempfile          = { default-features = false, version = "3.24" }
test-case         = { default-features = false, version = "3.3" }
tokio-stream      = { default-features = false, version = "0.1" }
tokio-test        = { default-features = false, version = "0.4" }

# Local packages used as dependencies
auth                          = { version = "1.3", path = "src/auth", package = "google-cloud-auth" }
google-cloud-auth             = { default-features = false, version = "1.3", path = "src/auth" }
gax                           = { version = "1.5", path = "src/gax", package = "google-cloud-gax" }
google-cloud-gax              = { version = "1.5", path = "src/gax" }
gaxi                          = { version = "0.7.7", path = "src/gax-internal", package = "google-cloud-gax-internal" }
iam_v1                        = { version = "1", path = "src/generated/iam/v1", package = "google-cloud-iam-v1" }
google-cloud-iam-v1           = { version = "1", path = "src/generated/iam/v1" }
location                      = { version = "1", path = "src/generated/cloud/location", package = "google-cloud-location" }
longrunning                   = { version = "1.2", path = "src/generated/longrunning", package = "google-cloud-longrunning" }
google-cloud-longrunning      = { version = "1.2", path = "src/generated/longrunning", package = "google-cloud-longrunning" }
lro                           = { version = "1.1", path = "src/lro", package = "google-cloud-lro" }
google-cloud-lro              = { version = "1.1", path = "src/lro", package = "google-cloud-lro" }
wkt                           = { version = "1", path = "src/wkt", package = "google-cloud-wkt" }
google-cloud-wkt              = { version = "1", path = "src/wkt", package = "google-cloud-wkt" }
api                           = { version = "1", path = "src/generated/api/types", package = "google-cloud-api" }
cloud_common                  = { version = "1", path = "src/generated/cloud/common", package = "google-cloud-common" }
gtype                         = { version = "1", path = "src/generated/type", package = "google-cloud-type" }
google-cloud-type             = { version = "1", path = "src/generated/type" }
grafeas                       = { version = "1", path = "src/generated/grafeas/v1", package = "google-cloud-grafeas-v1" }
logging_type                  = { version = "1", path = "src/generated/logging/type", package = "google-cloud-logging-type" }
rpc                           = { version = "1", path = "src/generated/rpc/types", package = "google-cloud-rpc" }
google-cloud-rpc              = { version = "1", path = "src/generated/rpc/types", package = "google-cloud-rpc" }
rpc_context                   = { version = "1", path = "src/generated/rpc/context", package = "google-cloud-rpc-context" }
apps_script_type              = { version = "1", path = "src/generated/apps/script/gtype", package = "google-cloud-apps-script-type" }
accesscontextmanager_v1       = { version = "1", path = "src/generated/identity/accesscontextmanager/v1", package = "google-cloud-identity-accesscontextmanager-v1" }
orgpolicy_v1                  = { version = "1", path = "src/generated/cloud/orgpolicy/v1", package = "google-cloud-orgpolicy-v1" }
orgpolicy_v2                  = { version = "1", path = "src/generated/cloud/orgpolicy/v2", package = "google-cloud-orgpolicy-v2" }
osconfig_v1                   = { version = "1", path = "src/generated/cloud/osconfig/v1", package = "google-cloud-osconfig-v1" }
gkehub_configmanagement_v1    = { version = "1", path = "src/generated/cloud/gkehub/configmanagement/v1", package = "google-cloud-gkehub-configmanagement-v1" }
gkehub_multiclusteringress_v1 = { version = "1", path = "src/generated/cloud/gkehub/multiclusteringress/v1", package = "google-cloud-gkehub-multiclusteringress-v1" }
apps_script_calendar          = { version = "1", path = "src/generated/apps/script/calendar", package = "google-cloud-apps-script-type-calendar" }
apps_script_docs              = { version = "1", path = "src/generated/apps/script/docs", package = "google-cloud-apps-script-type-docs" }
apps_script_drive             = { version = "1", path = "src/generated/apps/script/drive", package = "google-cloud-apps-script-type-drive" }
apps_script_gmail             = { version = "1", path = "src/generated/apps/script/gmail", package = "google-cloud-apps-script-type-gmail" }
apps_script_sheets            = { version = "1", path = "src/generated/apps/script/sheets", package = "google-cloud-apps-script-type-sheets" }
apps_script_slides            = { version = "1", path = "src/generated/apps/script/slides", package = "google-cloud-apps-script-type-slides" }
kms                           = { version = "1", path = "src/generated/cloud/kms/v1", package = "google-cloud-kms-v1" }
oslogin_common                = { version = "1", path = "src/generated/oslogin/common", package = "google-cloud-oslogin-common" }
iam_v2                        = { version = "1", path = "src/generated/iam/v2", package = "google-cloud-iam-v2" }
recommender                   = { version = "1", path = "src/generated/cloud/recommender/v1", package = "google-cloud-recommender-v1" }
accesscontextmanager_type     = { version = "1", path = "src/generated/identity/accesscontextmanager/type", package = "google-cloud-identity-accesscontextmanager-type" }
# Used in integration tests
google-cloud-speech-v2          = { version = "1", path = "src/generated/cloud/speech/v2" }
google-cloud-secretmanager-v1   = { version = "1", path = "src/generated/cloud/secretmanager/v1" }
secretmanager                   = { version = "1", path = "src/generated/cloud/secretmanager/v1", package = "google-cloud-secretmanager-v1" }
google-cloud-aiplatform-v1      = { version = "1", default-features = false, path = "src/generated/cloud/aiplatform/v1" }
google-cloud-compute-v1         = { version = "2", default-features = false, path = "src/generated/cloud/compute/v1" }
google-cloud-storage            = { version = "1", path = "src/storage" }
google-cloud-pubsub             = { path = "src/pubsub" }
google-cloud-bigquery-v2        = { version = "1", path = "src/generated/cloud/bigquery/v2" }
bigquery                        = { version = "1", path = "src/generated/cloud/bigquery/v2", package = "google-cloud-bigquery-v2" }
google-cloud-iam-credentials-v1 = { version = "1", path = "src/generated/iam/credentials/v1" }
iamcredentials                  = { version = "1", path = "src/generated/iam/credentials/v1", package = "google-cloud-iam-credentials-v1" }
google-cloud-language-v2        = { version = "1", path = "src/generated/cloud/language/v2" }
language                        = { version = "1", path = "src/generated/cloud/language/v2", package = "google-cloud-language-v2" }

# Local test packages (never add a version)
google-cloud-test-utils = { path = "src/test-utils" }
integration-tests       = { path = "tests/integration" }
pubsub-samples          = { path = "src/pubsub/examples" }
storage-samples         = { path = "src/storage/examples" }

[workspace.lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = [
  'cfg(google_cloud_unstable_storage_bidi)',
  'cfg(google_cloud_unstable_tracing)',
  'cfg(google_cloud_unstable_trusted_boundaries)',
] }
