# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-auth"
version     = "0.1.0"
authors     = ["Google LLC"]
description = "An auth library for Cloud Google APIs."
license     = "Apache-2.0"
repository  = "https://github.com/googleapis/google-cloud-rust/tree/main/auth"
keywords    = ["auth", "google", "google-cloud"]
categories  = ["authentication", "web-programming"]
edition     = "2021"

[dependencies]
base64         = "0.22"
chrono         = { version = "0.4", features = ["serde"] }
reqwest        = { version = "0.12", features = ["json"] }
rustls         = "0.20"
rustls-pemfile = "0.2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "2"
tokio          = { version = "1.12", features = ["full", "macros"] }
async-trait    = "0.1"
http           = "1.1"
backoff        = { version = "0.4", features = ["tokio"] }
