[package]
name = "service_account_creds"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
gcp-sdk-auth = { path = "../src/auth" }
tokio       = { version = "1.42", features = ["macros", "rt-multi-thread", "test-util"] }
rustls = {version ="0.23.20", features = ["ring"]}
